Update ignore files for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,8 @@
       }
     ],
     "ignore": [
-      "venv/",
-      "venv/Lib/site-packages/",
-      "venv/Scripts/"
+      "venv/Lib/",
+      "Lib/"
     ]
   }
   
